Favicon changed, animations added for mobile view

--- a/src/components/ContactFooter.astro
+++ b/src/components/ContactFooter.astro
@@ -3,7 +3,8 @@
 <section id="contact" class="w-full px-[8px] md:px-[14.4px]">
   <div class="relative w-full mx-auto min-h-[773px] rounded-[18px] overflow-hidden">
     <!-- Background Image -->
-    <img src="/images/footer.png" alt="" class="absolute inset-0 w-full h-full object-cover rounded-[18px]" />
+    <img src="/images/footer-mobile.png" alt="" class="md:hidden absolute inset-0 w-full h-full object-cover rounded-[18px]" />
+    <img src="/images/footer.png" alt="" class="hidden md:block absolute inset-0 w-full h-full object-cover rounded-[18px]" />
 
     <!-- Main Content Area -->
     <div class="relative z-10 pt-8">
