Mobile and desktop versions content and minor fixes

--- a/src/components/DivisionsSection.astro
+++ b/src/components/DivisionsSection.astro
@@ -1,6 +1,6 @@
 ---
 ---
-<section class="w-full py-[70px] md:py-[50px] px-[7.3px] md:px-9 overflow-hidden">
+<section class="w-full pt-[30px] pb-[70px] md:py-[50px] px-[7.3px] md:px-9 overflow-hidden">
   <div class="max-w-[1440px] mx-auto flex flex-col gap-12">
     <!-- Header -->
     <div class="flex items-center justify-between">
