--- a/src/components/CompaniesSection.astro
+++ b/src/components/CompaniesSection.astro
@@ -4,7 +4,7 @@
   <div class="max-w-[1388px] mx-auto flex flex-col gap-12">
     <!-- Header -->
     <div class="flex flex-col gap-[22px] pl-5">
-      <h2 class="font-funnel font-medium text-[29px] md:text-[38px] lg:text-[44.1px] leading-[32px] md:leading-[44px] lg:leading-[48px] tracking-[-0.64px] md:tracking-[-0.96px] gradient-heading">
+      <h2 class="font-funnel font-medium text-[29px] md:text-[38px] lg:text-[44.1px] leading-[38px] md:leading-[44px] lg:leading-[48px] tracking-[-0.64px] md:tracking-[-0.96px] gradient-heading">
         Operating companies
       </h2>
       <p class="font-inter-tight font-medium text-navy text-[17px] md:text-[18px] lg:text-[19.2px] leading-[28px] md:leading-[29px] lg:leading-[30px] max-w-[1141px]">
@@ -67,8 +67,8 @@
             </div>
             <!-- Hover state -->
             <div class="card-hover absolute inset-0 opacity-0 transition-opacity duration-300 ease-[cubic-bezier(0.75,0.02,0.5,1)]">
-              <div class="absolute inset-0" style="background: conic-gradient(from 90deg, rgb(244, 117, 117) 0%, rgb(224, 92, 92) 25%, rgb(205, 66, 66) 50%, rgb(185, 41, 41) 75%, rgb(175, 28, 28) 87.5%, rgb(165, 15, 15) 100%);"></div>
-              <img src="/images/hover-clicks.png" alt="" class="absolute left-1/2 top-1/2 translate-x-[-40%] translate-y-[-10%] h-[382px] w-[382px] object-cover" />
+              <div class="absolute inset-0 bg-gradient-to-br from-[#f47575] via-[#e05c5c] to-[#a50f0f]"></div>
+              <img src="/images/hover-clicks.png" alt="" class="absolute left-1/2 -translate-x-1/2 top-[180px] w-[230px] h-[205px] object-cover" />
               <p class="absolute left-[18px] top-[30px] w-[223px] font-bold text-white text-[28px] leading-[34px]" style="font-family: 'Helvetica Neue', sans-serif;">
                 24/7<br/>Roadside Assistance.
               </p>
